--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "tailwindcss": "^3.4.17",
+    "use-debounce": "^10.0.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
